<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context="sr.unasat.nyusu.activities.NewsActivity">

    <android.support.v7.widget.CardView
    android:id="@+id/DWTCARD"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de_ware_tijd"
        android:textSize="30sp"
        android:textStyle="bold"
        android:drawableBottom="@color/colorPrimary"
        />



        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ListView>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/Starnieuws"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starnieuws"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ListView>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/DBS"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dagblad_suriname"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ListView>
    </android.support.v7.widget.CardView>

    <!--Accordion view-->







</LinearLayout>




